final changes on multiplayer mode

--- a/client/src/Style/style.css
+++ b/client/src/Style/style.css
@@ -2,13 +2,26 @@
     -fx-background-color: linear-gradient(to bottom left,#371897,#2D75E6);
 }
 
+.border-radius{
+     -fx-hgap: 20px;
+    -fx-padding: 40px;
+
+    -fx-background-color: #2969c0;
+    -fx-background-radius: 50px;
+
+    -fx-border-radius: 50px;
+    -fx-border-width: 5px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.8), 10, 0, 0, 0);
+}
+
 .button1{
     -fx-background-color:#431FA0;
     -fx-text-fill:#ffffff;
+    -fx-background-radius:30;
 }
 
 .button1:hover{
-    -fx-text-fill:#431FA0;
+    -fx-text-fill:#00ccff;
 }
 
 .button1:pressed{
@@ -23,10 +36,8 @@
 
 .button2{
     -fx-background-color:#D5CBEB;
-    -fx-background-radius:5;
     -fx-text-fill:#371897;
-    -fx-border-color:#6F4CBB;
-    -fx-border-radius:5;
+    -fx-background-radius:30;
     
 }
 
@@ -36,6 +47,4 @@
 
 .button2:pressed{
     -fx-text-fill:#E4EEFD;
-    -fx-background-radius:20;
-
 }
